Fixed contacts overflow height

--- a/layout 2/css/index.css
+++ b/layout 2/css/index.css
@@ -82,8 +82,15 @@ html, body {
 	background-color: #347bff;
 }
 
-.scrollable {
+#file-list {
 	height:auto;
 	overflow: auto;
-	max-height: 85%;
+	max-height: 87%;
 }
+
+#contact-list {
+	height:auto;
+	overflow: auto;
+	max-height: 60%;
+}
+
